--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
+    "angularfire2": "^5.4.2",
+    "firebase": "^7.14.6",
     "rxjs": "~6.4.0",
+    "sweetalert2": "^9.14.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
